# vaccinate

./: .gitignore  Cargo.toml  LICENSE  TODO  vaccinate.toml.example
src/: config.rs  errors.rs  main.rs  pushover.rs  walgreens.rs
